# toggle-taskbar

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/: release-drafter.yml
toggle-taskbar/: main.py
toggle_taskbar/: cli.py  gui.py  keys.py  main.py  pyinstaller.py  utils.py  validation.py
