[tool.poetry]
name = "toggle-taskbar"
version = "0.1.0"
description = ""
authors = ["3hx <code@3hx.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
keyboard = "^0.13.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
